--- a/app/views/rules.scala.html
+++ b/app/views/rules.scala.html
@@ -1,4 +1,6 @@
+@(controller:de.htwg.se.NineMensMorris.controller.controllerComponent.ControllerInterface)(implicit request: RequestHeader)
 @main("rules") {
+
             <div class="container">
                 @navbar()
                 <h1>Rules</h1>
