--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,23 +4,29 @@
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
-@(title: String)(content: Html)
+@import views.html.helper.CSRF
+@(title: String)(content: Html)(implicit request: RequestHeader)
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
             <!-- Bootstrap CSS -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")" >
         <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")" >
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
 
+
     </head>
     <body>
+        @helper.CSRF.formField
+
         @* And here's where we render the `Html` object containing
          * the page content. *@
         @content
